--- a/app/views/flex_reports/_nested_rows.html.erb
+++ b/app/views/flex_reports/_nested_rows.html.erb
@@ -2,19 +2,14 @@
   <!-- an outer layer, print group headers with proper level of indentation -->
   <% group_field_name = @report.group_fields[@report.groups.size - group_fields.size].titleize %>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
-    <tr> 
-      <% (@report.groups.size - group_fields.size).times do %>
-        <td class="indent">&nbsp;</td>
-      <% end %>
-      <td class="report-item" colspan="<%= @report.fields.size + @report.group_fields.size %>"><%= group_name(row,group_fields).present? ? group_name(row,group_fields) : "#{group_field_name} Not Specified" %></td>
-    </tr> 
-    <%= render "nested_rows", :rows => row, :group_fields => group_fields[1..-1] %>
+    <%= render 'group_header', :row => row, :group_fields => group_fields %>
+    <%= render 'nested_rows', :rows => row, :group_fields => group_fields[1..-1] %>
     <%= render 'totals', :row=>row, :group_fields=>group_fields[1..-1], :short_name => short_group_name(row,group_fields), :group_field_name => group_field_name %>
   <% end %>
 <% else %>  
   <!-- innermost layer, render the data -->
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
-    <%= render "row", :row => row, :label => row.send(group_fields[0]) %>
+    <%= render 'row', :row => row, :label => row.send(group_fields[0]) %>
   <% end %>
 <% end %>
 
