Refactor flex report views for better reuse
views can now be fully reused by quarterly narrative report

--- a/app/views/flex_reports/_nested_rows.html.erb
+++ b/app/views/flex_reports/_nested_rows.html.erb
@@ -1,18 +1,17 @@
 <% if group_fields.size > 1 %>
   <!-- an outer layer, print group headers with proper level of indentation -->
-  <% group_field_name = @report.group_fields[@report.groups.size - group_fields.size].titleize %>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
-    <%= render 'group_header', :row => row, :group_fields => group_fields %>
-    <%= render 'nested_rows', :rows => row, :group_fields => group_fields[1..-1] %>
-    <%= render 'totals', :row=>row, :group_fields=>group_fields[1..-1], :short_name => short_group_name(row,group_fields), :group_field_name => group_field_name %>
+    <%= render 'flex_reports/group_header', :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
+    <%= render 'flex_reports/nested_rows', :rows => row, :report_group_fields => report_group_fields, :group_fields => group_fields[1..-1] %>
+    <%= render 'flex_reports/totals', :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
   <% end %>
 <% else %>  
   <!-- innermost layer, render the data -->
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
-    <%= render 'row', :row => row, :label => row.send(group_fields[0]) %>
+    <%= render 'flex_reports/row', :row => row, :report_group_fields => report_group_fields, :label => row.send(group_fields[0]) %>
   <% end %>
 <% end %>
 
 <% if group_fields.size == @report.group_fields.size %>
-  <%= render 'totals', :row=>rows, :group_fields=>group_fields, :name => "All" %>
+  <%= render 'flex_reports/totals', :row=>rows, :report_group_fields => report_group_fields, :group_fields=>group_fields, :name => "All" %>
 <% end %>
