--- a/app/views/flex_reports/_group_header.html.erb
+++ b/app/views/flex_reports/_group_header.html.erb
@@ -1,6 +1,6 @@
 <tr> 
-  <% (@report.groups.size - group_fields.size).times do %>
+  <% (report_group_fields.size - group_fields.size).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
-  <td class="report-item" colspan="<%= @report.fields.size + @report.group_fields.size %>"><%= group_name(row,group_fields).present? ? group_name(row,group_fields) : "#{group_field_name} Not Specified" %></td>
+  <td class="report-item" colspan="<%= @report.fields.size + report_group_fields.size %>"><%= group_name(row,group_fields).present? ? group_name(row,group_fields) : "#{group_field_name} Not Specified" %></td>
 </tr> 
