--- a/app/views/flex_reports/_report.html.erb
+++ b/app/views/flex_reports/_report.html.erb
@@ -1,8 +1,8 @@
 <div class="report-wrapper">
   <table>
-    <%= render "header" %>
+    <%= render "flex_reports/header", :report_group_fields => group_fields %>
     <tbody>
-      <%= render :partial=> "nested_rows", :locals=>{:rows => results, :group_fields => group_fields} %>
+      <%= render "flex_reports/nested_rows", :rows => results, :report_group_fields => group_fields, :group_fields => group_fields %>
     </tbody>
   </table>
 </div>
