Flex reports: bug fix for unnamed group values

--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -1,6 +1,5 @@
 <% short_name = short_group_name(row,group_fields) %>
 <% row = ReportRow.sum(row, nil, @report.fields) %>
-<% group_field_name = report_group_fields[report_group_fields.size - group_fields.size].titleize %>
 <tr class="<% if group_fields.size >= 3 %>sum-<% end %>totals">
   <% (report_group_fields.size - 1).times do %>
     <td class="indent">&nbsp;</td>
@@ -9,7 +8,7 @@
     <% if defined?(short_name) && short_name.present? %>
       <%= "#{short_name}" %>
     <% elsif defined?(short_name) && short_name.blank? %>
-      <%= "#{group_field_name} Not Specified" %>
+      <%= "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %>
     <% else %>
       <%= "Grand" %>
     <% end %> Total
