Filter date selects: exclude years where there's no data

--- a/app/views/flex_reports/_run_form.html.erb
+++ b/app/views/flex_reports/_run_form.html.erb
@@ -1,11 +1,11 @@
   <ol class="<%= ol_class %>">
     <li>
       <%= f.label :start_date %>
-      <%= f.date_select :start_date, :end_year => Time.now.year, :order => [:month, :year] %>
+      <%= f.date_select :start_date, :start_year => 2012, :end_year => Time.now.year, :order => [:month, :year] %>
     </li>
     <li>
       <%= f.label :end_date %>
-      <%= f.date_select :end_date, :end_year => Time.now.year, :order => [:month, :year] %>
+      <%= f.date_select :end_date, :start_year => 2012, :end_year => Time.now.year, :order => [:month, :year] %>
     </li>
     <li>
       <%= f.check_box :pending %>
