--- a/app/views/summaries/index.html.erb
+++ b/app/views/summaries/index.html.erb
@@ -6,8 +6,8 @@
   <fieldset>
 
     <ol class="section first">
-      <li><label>Start Date:</label> <%= f.date_select( :start_date, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
-      <li><label>End Date:</label> <%= f.date_select( :end_date, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
+      <li><label>Start Date:</label> <%= f.date_select( :start_date, :start_year => 2012, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
+      <li><label>End Date:</label> <%= f.date_select( :end_date, :start_year => 2012, :end_year => Date.today.year, :order => [:month, :year] ) %></li>
 
     </ol>
 
