--- a/app/views/flex_reports/_nested_rows.html.erb
+++ b/app/views/flex_reports/_nested_rows.html.erb
@@ -1,17 +1,23 @@
 <% if group_fields.size > 1 %>
-  <!-- an outer layer, print group headers with proper level of indentation -->
+  <% # an outer layer, print group headers and footers with proper level of indentation -%>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
-    <%= render 'flex_reports/group_header', :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
-    <%= render 'flex_reports/nested_rows', :rows => row, :report_group_fields => report_group_fields, :group_fields => group_fields[1..-1] %>
-    <%= render 'flex_reports/totals', :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
+    <%= render 'flex_reports/group_header', 
+        :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
+    <%= render 'flex_reports/nested_rows', 
+        :rows => row, :report_group_fields => report_group_fields, :group_fields => group_fields[1..-1] %>
+    <%= render 'flex_reports/totals', 
+        :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
   <% end %>
 <% else %>  
-  <!-- innermost layer, render the data -->
+  <% # innermost layer, render the data -%>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
-    <%= render 'flex_reports/row', :row => row, :report_group_fields => report_group_fields, :label => row.send(group_fields[0]) %>
+    <%= render 'flex_reports/row', 
+        :row => row, :report_group_fields => report_group_fields, :label => row.send(group_fields[0]) %>
   <% end %>
 <% end %>
 
-<% if group_fields.size == @report.group_fields.size %>
-  <%= render 'flex_reports/totals', :row=>rows, :report_group_fields => report_group_fields, :group_fields=>group_fields, :name => "All" %>
+<% if group_fields.size == report_group_fields.size %>
+  <% # grand total, if this is the outermost layer -%>
+  <%= render 'flex_reports/totals', 
+      :row=>rows, :report_group_fields => report_group_fields, :group_fields=>group_fields, :grand_total => true %>
 <% end %>
