--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -115,8 +115,8 @@
           <%= f.date_select :end_date, :start_year => 2012, :end_year => Time.now.year, :order=>[:month,:year] %>
         </li>
         <li>
-          <%= f.label :provider_id %>
-          <%= f.select :provider_id, options_for_select([['<All Providers>','']] + Provider.default_order.all.map { |p| [p.name, p.id] }) %>
+          <%= f.label :provider_id, 'Reporting Agency' %>
+          <%= f.select :provider_id, options_for_select([['<All Reporting Agencies>','']] + Provider.reporting_agencies.default_order.all.map { |p| [p.name, p.id] }) %>
         </li>
       </ol>
       <input type="submit" name="report" value="Report">
