--- a/app/views/predefined_reports/quarterly_narrative.html.erb
+++ b/app/views/predefined_reports/quarterly_narrative.html.erb
@@ -2,11 +2,12 @@
   <h1>Quarterly Narrative Report</h1>
 </div>
 
-<% @report.results.sort_by {|k,v| row_sort(k)}.each do |provider, provider_rows| %>
-  <% provider_rows.sort_by {|k,v| row_sort(k)}.each do |program, program_rows| %>
+<% @report.results.sort_by {|k,v| row_sort(k)}.each do |reporting_agency, reporting_agency_rows| %>
+  <% reporting_agency_rows.sort_by {|k,v| row_sort(k)}.each do |program, program_rows| %>
     <% allocation = get_row(program_rows).allocation %>
     <h2>
-      <%= allocation.provider_name %> &mdash; <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %>
+      <%= allocation.reporting_agency_name %> &mdash; 
+      <%= describe_date_range(@report.start_date, @report.end_date + 1.month - 1.day) %>
     </h2>
     <h3>Program: <%= allocation.program %></h3>
     <h3>County: <%= allocation.county %></h3>
