Flex report: row sorting shouldn't be affected by upper/lower case

--- a/app/views/flex_reports/_form.html.erb
+++ b/app/views/flex_reports/_form.html.erb
@@ -173,7 +173,7 @@
           </li>
           <li>
             <input type="checkbox" <%= checked?("cost_per_customer") %> name="flex_report[fields[cost_per_customer]]" id="cost_per_customer" value="1" /> 
-            <label for="cost_per_customer">Cost/Customer</label>
+            <label for="cost_per_customer">Cost/Cust</label>
           </li>
           <li>
             <input type="checkbox" <%= checked?("cost_per_mile") %> name="flex_report[fields[cost_per_mile]]" id="cost_per_mile" value="1" /> 
@@ -189,7 +189,7 @@
           </li>
           <li>
             <input type="checkbox" <%= checked?("miles_per_customer") %> name="flex_report[fields[miles_per_customer]]" id="miles_per_customer" value="1" /> 
-            <label for="miles_per_customer">Miles/Customer</label>
+            <label for="miles_per_customer">Miles/Cust</label>
           </li>
         </ol>
         <ol>
