--- a/app/views/flex_reports/_header.html.erb
+++ b/app/views/flex_reports/_header.html.erb
@@ -50,11 +50,11 @@
     <% if rf.include? 'driver_paid_hours' %><th class="wrap number">Paid</th><% end %>
     <% if rf.include? 'driver_total_hours' %><th class="wrap number">Total</th><% end %>
     <% if rf.include? 'cost_per_trip' %><th class="wrap number">Cost/Trip</th><% end %>
-    <% if rf.include? 'cost_per_customer' %><th class="wrap number">Cost/Customer</th><% end %>
+    <% if rf.include? 'cost_per_customer' %><th class="wrap number">Cost/Cust</th><% end %>
     <% if rf.include? 'cost_per_mile' %><th class="wrap number">Cost/Mile</th><% end %>
     <% if rf.include? 'cost_per_hour' %><th class="wrap number">Cost/Hour</th><% end %>
     <% if rf.include? 'miles_per_ride' %><th class="wrap number">Miles/Trip</th><% end %>
-    <% if rf.include? 'miles_per_customer' %><th class="wrap number">Miles/Customer</th><% end %>
+    <% if rf.include? 'miles_per_customer' %><th class="wrap number">Miles/Cust</th><% end %>
     <% if rf.include? 'escort_volunteer_hours' %><th class="wrap number">Escort</th><% end %>
     <% if rf.include? 'admin_volunteer_hours' %><th class="wrap number">Admin</th><% end %>
     <% if rf.include? 'total_volunteer_hours' %><th class="wrap number">Total</th><% end %>
