--- a/app/views/summaries/edit.html.erb
+++ b/app/views/summaries/edit.html.erb
@@ -12,9 +12,9 @@
       <% for version in @versions %>
         <li>
           <% if version == @summary %>
-            <%= time_ago_in_words version.valid_start %> ago
+            <%= version.valid_start.localtime.to_s(:full) %>
             <% else %>
-            <%= link_to time_ago_in_words(version.valid_start), :action=>:edit, :id=>version.id %> ago
+            <%= link_to version.valid_start.localtime.to_s(:full), :action=>:edit, :id=>version.id %>
           <% end %>
           by <span class="update-user"><%= version.updater.email %></span> 
           <%= link_to "", delete_summary_version_path(version), :class => "delete", :method => :post, :confirm => "Are you sure you want to delete this version?" if !version.latest? && current_user.is_admin %>
@@ -24,8 +24,8 @@
     </ul>
 
     <% if ! @summary.latest? %>
-    <br />
-    <div class="notice">You are viewing an old version created on <%= @summary.valid_start.to_s(:pretty) %></div>
+      <br />
+      <div class="notice">You are viewing an old version created on <%= @summary.valid_start.to_s(:pretty) %></div>
     <% end %>
 
   </div><!-- /#history -->
