Convert allocation program values to their own model

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -4,6 +4,7 @@
 
 <ul>
   <li><%= link_to "Allocations", :controller => "allocations" %></li>
+  <li><%= link_to "Programs", :controller => "programs" %></li>
   <li><%= link_to "Providers", :controller => "providers" %></li>
   <li><%= link_to "F.E. Projects", :controller => "projects" %></li>
   <li><%= link_to "RouteMatch Overrides", :controller => "overrides" %></li>
