Programs: add link to program record
from allocation record.

--- a/app/views/allocations/_form.html.erb
+++ b/app/views/allocations/_form.html.erb
@@ -26,6 +26,7 @@
       <li class="selfclear">
         <%= form.label :program %>
         <%= form.collection_select :program_id, Program.default_order, :id, :name, :include_blank => true %>
+        <%= link_to "Details", [:edit, @allocation.program], :class => :details if @allocation.program %>
       </li>
       
       <li class="selfclear">
