Rename ADS Predefined Report

--- a/app/views/predefined_reports/index.html.erb
+++ b/app/views/predefined_reports/index.html.erb
@@ -151,7 +151,7 @@
 <div class="predefined-report" data-name="monthly">
   <%= form_for @query, :html => { :class => "run-report", :method => 'get' }, :url => { :action => :multnomah_ads } do |f| %>
     <fieldset>
-      <h2 class="report-header">Multnomah ADS Report</h2>
+      <h2 class="report-header">Multnomah ADS Premium Report</h2>
       <p></p>
       <ol>
         <li>
