--- a/app/views/predefined_reports/multnomah_ads.html.erb
+++ b/app/views/predefined_reports/multnomah_ads.html.erb
@@ -1,6 +1,6 @@
 <div id="page-header">
   <h1>
-    Multnomah County ADS Report
+    Multnomah County ADS Premium Report
     <% if @query.provider_id.present? %>
       &mdash; <%= Provider.find(@query.provider_id).name %>
     <% else %>
