--- a/app/views/predefined_reports/premium_service_billing.erb
+++ b/app/views/predefined_reports/premium_service_billing.erb
@@ -1,6 +1,6 @@
 <div id="page-header">
   <h1>
-    Multnomah County ADS Premium Report
+    <%= @title %>
     <% if @query.provider_id.present? %>
       &mdash; <%= Provider.find(@query.provider_id).name %>
     <% else %>
