--- a/app/views/allocations/index.html.erb
+++ b/app/views/allocations/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= link_to allocation.name, edit_allocation_path(allocation) %></td>
         <td><%= allocation.activated_on %></td>
         <td><%= allocation.inactivated_on %></td>
-        <td><%= allocation.program.name %></td>
+        <td><%= allocation.program.try(:name) %></td>
         <td><%= allocation.project_name %></td>
         <td><%= allocation.county %></td>
         <td><%= link_to "Delete", allocation_url(allocation), :class => "delete", :method => "delete", :confirm => "Are you sure you want to delete this allocation?" if current_user.is_admin && !(allocation.trips.exists? || allocation.summaries.exists?) %></td>
