--- a/app/views/flex_reports/_report.html.erb
+++ b/app/views/flex_reports/_report.html.erb
@@ -3,6 +3,8 @@
     <%= render "flex_reports/header", :report_group_fields => group_fields %>
     <tbody>
       <%= render "flex_reports/nested_rows", :rows => results, :report_group_fields => group_fields, :group_fields => group_fields %>
+      <%= render 'flex_reports/totals', 
+          :row=>results, :report_group_fields => group_fields, :group_fields=>group_fields, :grand_total => true %>
     </tbody>
   </table>
 </div>
