--- a/app/views/flex_reports/_nested_rows.html.erb
+++ b/app/views/flex_reports/_nested_rows.html.erb
@@ -1,17 +1,22 @@
 <% if group_fields.size > 1 %>
+  <% i = 0 %>
   <% # an outer layer, print group headers and footers with proper level of indentation -%>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
+    <% i += 1 %>
+    <% this_row_group_class = ["row-group-#{group_fields.size}-#{i}"] %>
+    <% next_level_row_group_classes = (row_classes + this_row_group_class) %>
     <%= render 'flex_reports/group_header', 
-        :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
+        :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields, :row_classes => row_classes, 
+        :this_row_group_class => this_row_group_class %>
     <%= render 'flex_reports/nested_rows', 
-        :rows => row, :report_group_fields => report_group_fields, :group_fields => group_fields[1..-1] %>
+        :rows => row, :report_group_fields => report_group_fields, :group_fields => group_fields[1..-1], :row_classes => next_level_row_group_classes %>
     <%= render 'flex_reports/totals', 
-        :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields %>
+        :row => row, :report_group_fields => report_group_fields, :group_fields => group_fields, :row_classes => row_classes %>
   <% end %>
 <% else %>  
   <% # innermost layer, render the data -%>
   <% rows.sort_by {|k,v| row_sort(k)}.each do |group_name, row| %>
     <%= render 'flex_reports/row', 
-        :row => row, :report_group_fields => report_group_fields, :label => row.send(group_fields[0]) %>
+        :row => row, :report_group_fields => report_group_fields, :label => row.send(group_fields[0]), :row_classes => row_classes %>
   <% end %>
 <% end %>
