--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -1,6 +1,7 @@
 <% short_name = short_group_name(row,group_fields) %>
 <% row = ReportRow.sum(row, nil, @report.fields) %>
-<tr class="<% if group_fields.size >= 3 || (defined?(grand_total) && grand_total) %>sum-<% end %>totals">
+<% totals_class = (group_fields.size >= 3 || (defined?(grand_total) && grand_total)) ? "sum-totals" : "totals" %>
+<% content_tag :tr, :class => "#{row_classes.join(' ')} #{totals_class}"  do %>
   <% (report_group_fields.size - 1).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
@@ -154,4 +155,4 @@
       <%= number_with_precision(row.total_volunteer_hours, :precision => 1, :delimiter => ",") %>
     </td>
   <% end %>
-</tr>
+<% end %>
