Flex reports: improve nesting

--- a/app/views/flex_reports/_group_header.html.erb
+++ b/app/views/flex_reports/_group_header.html.erb
@@ -1,6 +1,10 @@
-<% content_tag :tr, :class => (row_classes + %w(compressable visible-group)).join(' '), "data-group" => this_row_group_class, "data-visible" => true do %>
+<% content_tag :tr, :class => (row_classes + %w(collapsible visible-group)).join(' '), "data-group" => this_row_group_class, "data-visible" => true do %>
   <% (report_group_fields.size - group_fields.size).times do %>
     <td class="indent">&nbsp;</td>
   <% end %>
-  <td class="report-item" colspan="<%= @report.fields.size + report_group_fields.size %>"><%= group_name(row,group_fields).present? ? group_name(row,group_fields) : "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %></td>
+  <% content_tag :td, :class => "report-item", :colspan => (@report.fields.size + report_group_fields.size) do %>
+    <%= group_name(row,group_fields).present? ? 
+        group_name(row,group_fields) : 
+        "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %>
+  <% end %>
 <% end %>
