--- a/app/views/flex_reports/_group_header.html.erb
+++ b/app/views/flex_reports/_group_header.html.erb
@@ -1,10 +1,20 @@
-<% content_tag :tr, :class => (row_classes + %w(collapsible visible-group)).join(' '), "data-group" => this_row_group_class, "data-visible" => true do %>
-  <% (report_group_fields.size - group_fields.size).times do %>
-    <td class="indent">&nbsp;</td>
-  <% end %>
-  <% content_tag :td, :class => "report-item", :colspan => (@report.fields.size + report_group_fields.size) do %>
-    <%= group_name(row,group_fields).present? ? 
-        group_name(row,group_fields) : 
-        "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %>
+<% content_tag :tr, 
+  :class => (row_classes + %w(collapsible visible-group) + (root_header ? ['no-print'] : [])).join(' '), 
+  "data-group" => this_row_group_class do %>
+  <% if root_header %>
+    <% content_tag :td, :class => "report-item", :colspan => (@report.fields.size + report_group_fields.size + 1) do %>
+      All Data
+    <% end %>
+  <% else %>
+    <% (report_group_fields.size - group_fields.size + 1).times do %>
+      <td class="indent">&nbsp;</td>
+    <% end %>
+    <% content_tag :td, :class => "report-item", :colspan => (@report.fields.size + report_group_fields.size) do %>
+      <% if group_name(row,group_fields).present? %> 
+        <%= group_name(row,group_fields) %>
+      <% else %>
+        <%= report_group_fields[report_group_fields.size - group_fields.size].titleize %> Not Specified"
+      <% end %>
+    <% end %>
   <% end %>
 <% end %>
