--- a/app/views/flex_reports/_totals.html.erb
+++ b/app/views/flex_reports/_totals.html.erb
@@ -2,18 +2,22 @@
 <% row = ReportRow.sum(row, nil, @report.fields) %>
 <% totals_class = (group_fields.size >= 3 || (defined?(grand_total) && grand_total)) ? "sum-totals" : "totals" %>
 <% content_tag :tr, :class => "#{row_classes.join(' ')} #{totals_class}"  do %>
-  <% (report_group_fields.size - group_fields.size).times do %>
-    <td class="indent">&nbsp;</td>
-  <% end %>
-  <% content_tag :td, :colspan => group_fields.size do %>
-    <% if defined?(grand_total) && grand_total %>
-      Grand
-    <% elsif short_name.present? %>
-      <%= short_name %>
-    <% else %>
-      <%= "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %>
+  <% if defined?(grand_total) && grand_total %>
+    <% content_tag :td, :colspan => group_fields.size + 1 do %>
+      Grand Total
     <% end %>
-    Total
+  <% else %>
+    <% (report_group_fields.size - group_fields.size + 1).times do %>
+      <td class="indent">&nbsp;</td>
+    <% end %>
+    <% content_tag :td, :colspan => group_fields.size do %>
+      <% if short_name.present? %>
+        <%= short_name %>
+      <% else %>
+        <%= "#{report_group_fields[report_group_fields.size - group_fields.size].titleize} Not Specified" %>
+      <% end %>
+      Total
+    <% end %>
   <% end %>
   <% if @report.fields.include? 'funds' %>
     <td class="number">
