--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -793,9 +793,9 @@ div.report-wrapper .indent {
   border-bottom: 0;
 }
 
+div.report-wrapper th.indent,
 div.report-wrapper td.indent {
-  background: #E5F2FF;
-  width: 10px;
+  min-width: 10px;
   padding: 0;
 } 
 
