Label fixes for flex reports

--- a/app/views/flex_reports/_header.html.erb
+++ b/app/views/flex_reports/_header.html.erb
@@ -7,7 +7,7 @@
     <th rowspan="2" class="wrap text"><%= @report.group_fields[-1].sub("_id","").sub("_"," ").titleize %></th>
     <% column_count = (rf & %w{funds agency_other vehicle_maint administrative operations donations total}).count %>
     <% if column_count > 0 %>
-      <th class="column-group" colspan="<%= column_count %>">Costs</th>
+      <th class="column-group" colspan="<%= column_count %>">Funding</th>
     <% end %>
     <% column_count = (rf & %w{in_district_trips out_of_district_trips customer_trips guest_and_attendant_trips total_trips total_last_year}).count %>
     <% if column_count > 0 %>
