A little link cleanup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
 <body class="<%= bodytag_class %>">
   <div id="header">
     <div class="wrap selfclear">
-      <a id="logo" href="/">Ride Connection Service Database</a>
+      <%= link_to "Ride Connection Service Database", root_url, :id => :logo %>
       <div id="login-area">
         <% if current_user %>
           <a href="#"><%= current_user.email %></a> | <%= link_to "Log out", logout_path, {:method=>"post"} %>
